kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-api
  # annotations:
  #   "sidecar.jaegertracing.io/inject": "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: go-api
  template:
    metadata:
      labels:
        app: go-api
    spec:
      containers:
        - name: go-api
          # image: ericbutera/go-api:0.0.3
          image: localhost:32000/go-api:0.0.3
          resources:
            limits:
              memory: "128Mi"
              cpu: "100m"
          ports:
            - containerPort: 8080
