kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: go-api
spec:
  ports:
    - port: 8080
      protocol: TCP
  selector:
    app: go-api
