kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-api
  # namespace: api-service
  annotations:
    cert-manager.io/cluster-issuer: lets-encrypt
spec:
  tls:
    - hosts:
        - go-api.nibelheim.dev
      secretName: go-api-ingress-tls
  rules:
    - host: go-api.nibelheim.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: go-api
                port:
                  number: 8080
